fix: team section gaps

--- a/assets/css/components/project_page.css
+++ b/assets/css/components/project_page.css
@@ -26,7 +26,8 @@
   border-radius: .5rem;
 }
 
-.project__built {
+.project__built,
+.team {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -41,8 +42,7 @@
   gap: 1rem;
 }
 
-.project__built_features,
-.team__list {
+.project__built_features {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -76,6 +76,13 @@
   flex-direction: column;
   align-items: flex-start;
   gap: .5rem;
+}
+
+.team__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .team__list_member {
